--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+    <p>This is test paragraph</p>
   </body>
 </html>
