--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
       </div>
     </header>
     <p>This is test paragraph</p>
+    <h1>This is body part</h1>
+    <p>THis is text</p>
   </body>
 </html>
