--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <!-- Header end here -->
 
-    <!-- test grid section -->
+    <!-- test grid section 
     <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
@@ -59,5 +59,40 @@
         <div class="col-3-of-4">Col 3 of 4</div>
       </div>
     </section>
+    -->
+
+    <!-- about section start -->
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You are going to fall in love with nature.
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Consequuntur nostrum soluta necessitatibus animi eaque saepe esse,
+              impedit aut at quos aliquam. Illo recusandae reiciendis ea
+              assumenda saepe, accusamus adipisci repellendus?
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you never before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+              sapiente!
+            </p>
+            <a href="#" class="btn-text"> Learn more &rarr; </a>
+          </div>
+          <div class="col-1-of-2">Image composition</div>
+        </div>
+      </section>
+    </main>
+    <!-- about section end -->
   </body>
 </html>
