--- a/index.html
+++ b/index.html
@@ -89,7 +89,23 @@
             </p>
             <a href="#" class="btn-text"> Learn more &rarr; </a>
           </div>
-          <div class="col-1-of-2">Image composition</div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="img/nat-1.jpg"
+                alt="photo 1"
+                class="composition__photo composition__photo--p1"
+              /><img
+                src="img/nat-2.jpg"
+                alt="photo 2"
+                class="composition__photo composition__photo--p1"
+              /><img
+                src="img/nat-3.jpg"
+                alt="photo 3"
+                class="composition__photo composition__photo--p1"
+              />
+            </div>
+          </div>
         </div>
       </section>
     </main>
