new section design done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Natours Projects | Home</title>
   </head>
@@ -92,22 +93,41 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
-                src="img/nat-1.jpg"
+                src="img/nat-1-large.jpg"
                 alt="photo 1"
                 class="composition__photo composition__photo--p1"
               /><img
-                src="img/nat-2.jpg"
+                src="img/nat-2-large.jpg"
                 alt="photo 2"
-                class="composition__photo composition__photo--p1"
+                class="composition__photo composition__photo--p2"
               /><img
-                src="img/nat-3.jpg"
+                src="img/nat-3-large.jpg"
                 alt="photo 3"
-                class="composition__photo composition__photo--p1"
+                class="composition__photo composition__photo--p3"
               />
             </div>
           </div>
         </div>
       </section>
+
+      <!-- featured section start here -->
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Placeat, culpa.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- featured section end  here -->
     </main>
     <!-- about section end -->
   </body>
