--- a/index.html
+++ b/index.html
@@ -125,9 +125,52 @@
               </p>
             </div>
           </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Meet nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Placeat, culpa.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Placeat, culpa.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live a healthier life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Placeat, culpa.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- featured section end  here -->
+
+      <!-- tour section start here -->
+
+      <!-- tour section end here -->
     </main>
     <!-- about section end -->
   </body>
