--- a/index.html
+++ b/index.html
@@ -169,7 +169,31 @@
       <!-- featured section end  here -->
 
       <!-- tour section start here -->
-
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Most popular tours</h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-1">
+                <div class="card__picture card__picture--1">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span-1">
+                    The see explorer
+                  </span>
+                </h4>
+                <div class="card__details">Details</div>
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">Col 1 of 3</div>
+          <div class="col-1-of-3">Col 1 of 3</div>
+        </div>
+      </section>
       <!-- tour section end here -->
     </main>
     <!-- about section end -->
