tour section design is on progress

--- a/index.html
+++ b/index.html
@@ -272,6 +272,32 @@
         </div>
       </section>
       <!-- tour section end here -->
+
+      <!-- story section start here -->
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-8.jpg" alt="story" class="story__img" />
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+                magni sit cumque reprehenderit numquam, laudantium accusantium.
+                Magni deserunt quisquam temporibus.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- story section end here -->
     </main>
     <!-- about section end -->
   </body>
