--- a/index.html
+++ b/index.html
@@ -275,6 +275,13 @@
 
       <!-- story section start here -->
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            your browser is not supported!
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
@@ -283,6 +290,7 @@
           <div class="story">
             <figure class="story__shape">
               <img src="img/nat-8.jpg" alt="story" class="story__img" />
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -295,6 +303,32 @@
               </p>
             </div>
           </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-9.jpg" alt="story" class="story__img" />
+              <figcaption class="story__caption">Jack wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+                enim itaque obcaecati nemo necessitatibus deserunt porro,
+                reiciendis ipsa veniam, fugiat in velit incidunt et at quas
+                accusamus numquam eveniet, tenetur perspiciatis animi tempore
+                modi. Culpa animi harum nostrum itaque ut, hic illum numquam
+                eveniet, suscipit cumque, corporis enim odit quaerat.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
       <!-- story section end here -->
