footer section complete

--- a/index.html
+++ b/index.html
@@ -400,6 +400,45 @@
       </section>
       <!-- booking section end here -->
     </main>
-    <!-- about section end -->
+    <!-- Footer part start here -->
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Service</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Built by <a href="#" class="footer__link">Jhonas</a> for online
+            course <a href="#" class="footer__link">Advance CSS and Sass.</a>,
+            Copyright &copy; by Rakib. You are always welcome to clone this
+            project and use it. Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit. Ratione nostrum officiis et maxime. Maiores,
+            dolore corporis commodi eius omnis culpa.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer part end here -->
   </body>
 </html>
