navigation halfwork complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
     <title>Natours Projects | Home</title>
   </head>
   <body>
+    <!-- navigation start here -->
+    <div class="navigation">
+      <input type="checkbox" id="navi-toogle" class="navigation__checkbox" />
+      <label for="navi-toogle" class="navigation__button"> Menu </label>
+
+      <div class="navigation__background">&nbsp;</div>
+
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">About Natous</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Your benefits</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Popular tours</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Stories</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">Book now</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <!-- navigation end here -->
+
     <!-- Header start here -->
     <header class="header">
       <div class="header__logo-box">
