navigation section complete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- navigation start here -->
     <div class="navigation">
       <input type="checkbox" id="navi-toogle" class="navigation__checkbox" />
-      <label for="navi-toogle" class="navigation__button"> Menu </label>
+      <label for="navi-toogle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
 
       <div class="navigation__background">&nbsp;</div>
 
