--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <!-- featured section end  here -->
 
       <!-- tour section start here -->
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
@@ -230,7 +230,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now</a>
+                  <a href="#popup" class="btn btn--white">Book Now</a>
                 </div>
               </div>
             </div>
@@ -261,7 +261,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now</a>
+                  <a href="#popup" class="btn btn--white">Book Now</a>
                 </div>
               </div>
             </div>
@@ -292,7 +292,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$697</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book Now</a>
+                  <a href="#popup" class="btn btn--white">Book Now</a>
                 </div>
               </div>
             </div>
@@ -471,5 +471,35 @@
       </div>
     </footer>
     <!-- Footer part end here -->
+
+    <!-- popup start here -->
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="1" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="img" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start Booking Now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo eum
+            quidem delectus voluptatibus ad harum illum pariatur dolores labore
+            eius, fuga quaerat molestias, similique voluptatum magnam totam esse
+            assumenda quam deleniti incidunt, ducimus earum nemo. Iusto
+            perferendis recusandae asperiores veniam aliquam harum facere
+            explicabo excepturi atque, magni accusantium, aspernatur impedit?
+          </p>
+
+          <a href="#" class="btn btn--green">Book Now</a>
+        </div>
+      </div>
+    </div>
+    <!-- popup end here -->
   </body>
 </html>
